[gd_scene load_steps=10 format=3 uid="uid://b0qmsdxiq2ihv"]

[ext_resource type="Script" uid="uid://0cqtjxise154" path="res://backgrounds/dice formations at sunset/background_1.gd" id="1_4oo4d"]
[ext_resource type="Texture2D" uid="uid://b4hf43wcetsoh" path="res://images/background layers/sky.png" id="2_p2na5"]
[ext_resource type="Texture2D" uid="uid://b0xsvyasgjthp" path="res://images/background layers/clouds.png" id="3_mph6t"]
[ext_resource type="Texture2D" uid="uid://dndprietcec48" path="res://images/background layers/land.png" id="4_e15ue"]
[ext_resource type="Texture2D" uid="uid://c6e88itwsogup" path="res://images/background layers/cloud shadow.png" id="5_82ctm"]
[ext_resource type="Texture2D" uid="uid://dpeglm733yngi" path="res://images/background layers/ground 4.png" id="6_epo3u"]
[ext_resource type="Texture2D" uid="uid://l3bb2druydul" path="res://images/background layers/ground 3.png" id="7_8ii1b"]
[ext_resource type="Texture2D" uid="uid://cvd8if4n7b6pp" path="res://images/background layers/ground 2.png" id="8_xgr47"]
[ext_resource type="Texture2D" uid="uid://bwgwby0b10co5" path="res://images/background layers/ground.png" id="9_b5wv7"]

[node name="Background1" type="Node2D"]
script = ExtResource("1_4oo4d")

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(1232, 0)
repeat_times = 4

[node name="Sky" type="Sprite2D" parent="Parallax2D"]
texture = ExtResource("2_p2na5")
centered = false
offset = Vector2(-1232, 0)

[node name="Parallax2D2" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.8, 0.8)
repeat_size = Vector2(1232, 0)
repeat_times = 4

[node name="Clouds" type="Sprite2D" parent="Parallax2D2"]
texture = ExtResource("3_mph6t")
centered = false
offset = Vector2(-1232, 0)

[node name="Parallax2D3" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.9, 0.9)
repeat_size = Vector2(1232, 0)
repeat_times = 4

[node name="land" type="Sprite2D" parent="Parallax2D3"]
texture = ExtResource("4_e15ue")
centered = false
offset = Vector2(-1232, 0)

[node name="Parallax2D4" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.8, 0.8)
repeat_size = Vector2(1232, 0)
repeat_times = 4

[node name="Cloud Shadows" type="Sprite2D" parent="Parallax2D4"]
texture = ExtResource("5_82ctm")
centered = false
offset = Vector2(-1232, 0)

[node name="Parallax2D5" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.7, 0.7)
repeat_size = Vector2(1232, 0)
repeat_times = 4

[node name="Sprite2D5" type="Sprite2D" parent="Parallax2D5"]
texture = ExtResource("6_epo3u")
centered = false
offset = Vector2(-1232, 0)

[node name="Parallax2D6" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.7, 0.7)
repeat_size = Vector2(1232, 0)
repeat_times = 4

[node name="Sprite2D6" type="Sprite2D" parent="Parallax2D6"]
texture = ExtResource("7_8ii1b")
centered = false
offset = Vector2(-1232, 0)

[node name="Parallax2D7" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.8, 0.8)
repeat_size = Vector2(1232, 0)
repeat_times = 4

[node name="Sprite2D7" type="Sprite2D" parent="Parallax2D7"]
texture = ExtResource("8_xgr47")
centered = false
offset = Vector2(-1232, 0)

[node name="Parallax2D8" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.95, 0.95)
repeat_size = Vector2(1232, 0)
repeat_times = 4

[node name="Sprite2D8" type="Sprite2D" parent="Parallax2D8"]
texture = ExtResource("9_b5wv7")
centered = false
offset = Vector2(-1232, 0)
